# RoadCap-Gen

./: .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml  qa_format.md  requirements.txt  requirements_for_depth.txt  run.sh
1_QAs_Generation/: README.md
2_VLM_Finetuning/: README.md
3_VLM_Eval/: README.md
4_VLM_Inference/: README.md
Data/: README.md
augmented_GT_QAs/: nuscenes_qas.py  questions.json
configs/: config.yaml
configs/dataset/: drivelm.yaml  drivelm_train0.2_from_test_distr.yaml  drivelm_v1_2_val0.1.yaml  qa_dataset.yaml  qas_drivelm_ratios.json  vqa_valeo_karolina.yaml
configs/inference/: drivelm_infer.yaml  llama_adapter_v2_infer.yaml  llm_prompt_config.yaml
configs/mode/: extended.yaml  simple.yaml
configs/model/: llama_adapter_v2.yaml  llava.yaml
configs/training/: full_finetune.yaml  full_finetune_cps_offline_best.yaml  full_finetune_nju_online_best.yaml  full_finetuning.yaml  lora.yaml  lora_llm.yaml  lora_llm_with_depth.yaml
scripts/00_data_prep/: extract_metadata.py  generate_tracks.py  karolina_yolo_sam_tracking.sh  old_valeo_data_extraction.py
scripts/01_pseudo_labels_gen/: convert_data.py  cout_qas.py  get_answer_distribution.py  pseudo_qas_generation.py  pseudo_qas_generation_batching_for_h100.py  pseudo_qas_generation_whole_folder.py  sample.jsonl  sample_converted.json  test_set_generation.py  transform_global_coords_to_relative.py
scripts/023_trainval/: karolina_trainval.sh  karolina_trainval_with_depth.sh  trainval.py
src/: README.md
vllm_tests/: results.txt  run_tests.sh  vllm_test.py
(+33 files in other folders)
