[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "roadcap"
version = "0.1.0"
description = "VLM Fine-tuning for Road Scene Reasoning"
requires-python = ">=3.13"
dependencies = [
    "torch",
    "transformers",
    "hydra-core",
    "wandb",
    "demjson3>=3.0.6",
    "vllm>=0.16.0",
    "accelerate>=1.12.0",
]

[tool.setuptools.packages.find]
where = ["."]  # Tells python to look for packages here
include = ["src*", "external*"]


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
